--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,6 @@
 name: Build on PR
 
-on:
-  pull_request:
-    branches:
-      - master
-      - newbr
+on: push
 
 jobs:
   build:
@@ -18,6 +14,9 @@ jobs:
       
       - name: Install Dependencies
         run: npm install
+
+      - name: generate prisma client
+        run: npm run db:generate
         
       - name: Run Build
         run: npm run build
